[package]
name = "msfrpc"
version = "0.1.0"
authors = ["n3x7c04p <qkrwhdals025@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.114", features=["derive"] }
rmp-serde = { version = "0.14.3" }
ureq = { version = "*", features=["charset"]} 
subprocess = "0.2.4"
